// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match snapshot, with bot teammate 1`] = `
<Fragment>
  <div
    className="post-profile-img__container channel-intro-img"
  >
    <ProfilePicture
      hasMention={true}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xl"
      src="/api/v4/users/bot1/image?_=0"
      userId="bot1"
      wrapperClass=""
    />
  </div>
  <div
    className="channel-intro-profile d-flex"
  >
    <Connect(UserProfile)
      disablePopover={false}
      hasMention={true}
      userId="bot1"
    />
  </div>
  <p
    className="channel-intro-text"
  >
    <FormattedMarkdownMessage
      defaultMessage="This is the start of your direct message history with {teammate}.\\\\nDirect messages and files shared here are not shown to people outside this area."
      id="intro_messages.DM"
      values={
        Object {
          "teammate": "my teammate",
        }
      }
    />
  </p>
  <Connect(Component)
    show={false}
  />
  <Connect(Component)
    show={false}
  />
</Fragment>
`;

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match snapshot, with teammate 1`] = `
<Fragment>
  <div
    className="post-profile-img__container channel-intro-img"
  >
    <ProfilePicture
      hasMention={true}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xl"
      src="/api/v4/users/user1/image?_=0"
      userId="user1"
      wrapperClass=""
    />
  </div>
  <div
    className="channel-intro-profile d-flex"
  >
    <Connect(UserProfile)
      disablePopover={false}
      hasMention={true}
      userId="user1"
    />
  </div>
  <p
    className="channel-intro-text"
  >
    <FormattedMarkdownMessage
      defaultMessage="This is the start of your direct message history with {teammate}.\\\\nDirect messages and files shared here are not shown to people outside this area."
      id="intro_messages.DM"
      values={
        Object {
          "teammate": "my teammate",
        }
      }
    />
  </p>
  <Connect(Component)
    show={true}
  />
  <Connect(Component)
    show={true}
  />
</Fragment>
`;

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match snapshot, without teammate 1`] = `
<p
  className="channel-intro-text"
>
  <MemoizedFormattedMessage
    defaultMessage="This is the start of your direct message history with this teammate. Direct messages and files shared here are not shown to people outside this area."
    id="intro_messages.teammate"
  />
</p>
`;
